syntax = "proto3";

package modsign;

import "koinos/options.proto";

message on_install_args {
    bytes data = 1;
}

message on_uninstall_args {
    bytes data = 1;
}

message is_type_args {
    uint32 type_id = 1;
}

message is_type_result {
    bool value = 1;
}

message manifest {
    string name = 1;
    uint32 type_id = 2;
    string version = 3;
    string description = 4;
}

message is_valid_signature_args {
    bytes sender = 1 [(koinos.btype) = ADDRESS];
    bytes signature = 2;
    bytes tx_id = 3 [(koinos.btype) = HEX];
}

message is_valid_signature_result {
    bool value = 1;
}